# qfield-plugin-templater

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: autolabeler.yml  docs.yml
documentation/: zensical.toml
documentation/docs/: contributing.md  dev_workflow.md  how_to_use.md  index.md  what_you_get.md
hooks/: post_gen_project.py  pre_gen_project.py
qfplugin-{{cookiecutter.plugin_name_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
qfplugin-{{cookiecutter.plugin_name_slug}}/.github/: labeler.yml
qfplugin-{{cookiecutter.plugin_name_slug}}/.github/workflows/: lint.yml  pr_qrcode.yml  release.yml  tests.yml
qfplugin-{{cookiecutter.plugin_name_slug}}/scripts/: generate_qr_code.py
qfplugin-{{cookiecutter.plugin_name_slug}}/scripts/github/: delete-bot-comment.js  delete-pr-prereleases.js
qfplugin-{{cookiecutter.plugin_name_slug}}/scripts/gitlab/: post_mr_comment.sh
qfplugin-{{cookiecutter.plugin_name_slug}}/tests/: __init__.py  conftest.py  test_plugin.py
qfplugin-{{cookiecutter.plugin_name_slug}}/{{cookiecutter.plugin_name_slug}}/: FamousPlacesDialog.qml  MultimediaDialog.qml  main.qml  metadata.txt  translations.pro
scripts/: resize-image.sh
