[project]
name = "{{ cookiecutter.plugin_name_slug }}"
version = "0.1"
description = "{{ cookiecutter.plugin_description }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zensical>=0.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-qfield>=0.9.0",
]

[tool.pytest.ini_options]
qt_api = "pyqt6"
qfield_imports_dir = "QField/src/qml/imports"

[tool.uv]
override-dependencies = [
    "PyQt6; sys_platform == 'never'",
]
